--- a/uzduotis_57_flex/styles.css
+++ b/uzduotis_57_flex/styles.css
@@ -34,6 +34,8 @@
 
 
 
+}
+
 .spring{
     border-width: 9px 0px 0px 10px;
     background: linear-gradient(150deg, rgba(34,139,34,.25) 40%, rgba(255,215,0,0.3) 80%)
